--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Logging
 LOG_LEVEL=DEBUG
-LOG_FORMAT="{asctime} #{levelname:8} {filename}:{linelo} - {name} - {message}"
+LOG_FORMAT="{asctime} #{levelname:8} {filename}:{lineno} - {name} - {message}"
 LOG_STYLE="{"
 
 # Bot
